force-app/main/default/objects/Activity/fields/F1__c.field-meta.xml
<CustomField>
    <fullName>F1__c</fullName>
    <description>cdzxv</description>
    <label>F1</label>
    <type>Date</type>
</CustomField>