force-app/main/default/objects/Activity/fields/GIRI_PS_F_ON_ACTIVITY__c.field-meta.xml
<CustomField>
    <fullName>GIRI_PS_F_ON_ACTIVITY__c</fullName>
    <label>GIRI_PS_F_ON_ACTIVITY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>